Listo el AboutUs y el Contact (solo falta implementar el correo)

--- a/carrito.html
+++ b/carrito.html
@@ -92,9 +92,9 @@
                                     <!-- Categorías -->
                                     <div class="col-3">
                                         <ul class="list-unstyled">
-                                            <a class="dropdown-item  " href="property-single.html">Contact</a>
-                                            <a class="dropdown-item  " href="agents-grid.html">About Us</a>
-                                            <a class="dropdown-item " href="agent-single.html">Ubication</a>
+                                            <a class="dropdown-item  " href="contact.html">Contact</a>
+                                            <a class="dropdown-item  " href="aboutUs.html">About Us</a>
+                                            <a class="dropdown-item " href="https://wa.me/50660630863">Whatsapp</a>
                                         </ul>
                                     </div>
 
