--- a/detalle.html
+++ b/detalle.html
@@ -94,9 +94,9 @@
                                     <!-- Categorías -->
                                     <div class="col-3">
                                         <ul class="list-unstyled">
-                                            <a class="dropdown-item  " href="property-single.html">Contact</a>
-                                            <a class="dropdown-item  " href="agents-grid.html">About Us</a>
-                                            <a class="dropdown-item " href="agent-single.html">Ubication</a>
+                                            <a class="dropdown-item  " href="contact.html">Contact</a>
+                                            <a class="dropdown-item  " href="aboutUs.html">About Us</a>
+                                            <a class="dropdown-item " href="https://wa.me/50660630863">Whatsapp</a>
                                         </ul>
                                     </div>
 
@@ -174,14 +174,14 @@
                             <li class="list-inline-item"><a href="index.html" class="text-dark">Home</a></li>
                             <li class="list-inline-item"><a href="newDrop.html" class="text-dark">New Drop</a></li>
                             <li class="list-inline-item"><a href="#" class="text-dark">Clothes</a></li>
-                            <li class="list-inline-item"><a href="#" class="text-dark">Info</a></li>
+                            <li class="list-inline-item"><a href="contact.html" class="text-dark">Info</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 text-md-end">
                         <a href="#" class="text-dark me-3"><i class="bi bi-facebook"></i></a>
                         <a href="#" class="text-dark me-3"><i class="bi bi-youtube"></i></a>
                         <a href="#" class="text-dark me-3"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="bi bi-whatsapp"></i></a>
+                        <a href="https://wa.me/50660630863" class="text-dark me-3"><i class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
 
