corregido un error de espacio en el bag

--- a/carrito.html
+++ b/carrito.html
@@ -116,20 +116,77 @@
         </nav>
     </head>
 
-    <div class="container  py-5">
+    <div class="container  py-5 ">
         <h2 class="mb-4 espacioCarrito">Tu cesta de productos</h2>
-        <div class="row" id="contenedorCarrito">
+        <div class="row " id="contenedorCarrito">
             <!-- Aquí se cargan las tarjetas de productos -->
         </div>
     </div>
 
     
 
-    <div class="text-center mt-4">
-        <button class="btn btn-dark  btn-lg me-2" onclick="vaciarCarrito()">Vaciar cesta</button>
+    <div class="text-center mt-4 espacioCarrito">
+        <button class="btn btn-dark  btn-lg me-2 " onclick="vaciarCarrito()">Vaciar cesta</button>
         <a href="checkout.html" class="btn btn-dark btn-lg">Proceder al pago</a>
     </div>
 
+     <footer class="bg-light text-dark pt-5">
+        <div class="container">
+            <div class="row">
+
+                <!-- Columna 1 -->
+                <div class="col-md-4 mb-4">
+                    <h5 class="fw-bold">StreetShop___</h5>
+                    <p class="text-muted">
+                        Viste a tu mejor manera con con StreetShop, con un estilo unico e inigualable, de una forma
+                        comoda y barata, para el día a día.
+                    </p>
+                    <p class="mb-1"><strong>Email</strong>: <a href="#" class="text-dark">streetshop611@gmail.com
+                        </a></p>
+                    <p><strong>Number</strong>: +506 6063 0863</p>
+                </div>
+
+                <!-- Columna 2 -->
+                <div class="col-md-3 ms-md-auto">
+                    <h5 class="fw-bold">Styles</h5>
+                    <ul class="list-unstyled">
+                        <li><i class="bi bi-chevron-right text-success me-2"></i>Tees</li>
+                        <li><i class="bi bi-chevron-right text-success me-2"></i>Hoodies</li>
+                        <li><i class="bi bi-chevron-right text-success me-2"></i>Crewnecks</li>
+                        <li><i class="bi bi-chevron-right text-success me-2"></i>Pants</li>
+                        <li><i class="bi bi-chevron-right text-success me-2"></i>Shorts</li>
+                        <li><i class="bi bi-chevron-right text-success me-2"></i>Mistery Box</li>
+                    </ul>
+                </div>
+
+
+                <hr>
+
+                <!-- Links e iconos -->
+                <div class="row text-center text-md-start">
+                    <div class="col-md-6 mb-3 mb-md-0">
+                        <ul class="list-inline mb-2">
+                            <li class="list-inline-item"><a href="index.html" class="text-dark">Home</a></li>
+                            <li class="list-inline-item"><a href="newDrop.html" class="text-dark">New Drop</a></li>
+                            <li class="list-inline-item"><a href="#" class="text-dark">Clothes</a></li>
+                            <li class="list-inline-item"><a href="contact.html" class="text-dark">Info</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 text-md-end">
+                        <a href="#" class="text-dark me-3"><i class="bi bi-facebook"></i></a>
+                        <a href="#" class="text-dark me-3"><i class="bi bi-youtube"></i></a>
+                        <a href="#" class="text-dark me-3"><i class="bi bi-instagram"></i></a>
+                        <a href="https://wa.me/50660630863" class="text-dark me-3"><i class="bi bi-whatsapp"></i></a>
+                    </div>
+                </div>
+
+                <!-- Copyright -->
+                <div class="text-center mt-4 text-muted">
+                    <p class="mb-5">&copy; Copyright <strong>StreetShop</strong> All Rights Reserved.</p>
+
+                </div>
+            </div>
+    </footer>
     
 
     <!-- Bootstrap JavaScript Libraries -->
