listo los filtros de la ropa

--- a/newDrop.html
+++ b/newDrop.html
@@ -139,10 +139,10 @@
     </div>
 
     <div class="container">
-        <div class="row justify-content-center align-items-center  gx-4 gy-2 g-3 bg-white bg-opacity-75 p-4 rounded"   >
+        <div class="row justify-content-center align-items-center  gx-4 gy-2 g-3 bg-white bg-opacity-75 p-4 rounded">
             <div class="col-md-3 me-3">
                 <label class="form-label">Disponibilidad</label>
-                <select class="form-select">
+                <select class="form-select" id="filtroDisponibilidad">
                     <option>Todos</option>
                     <option>Disponible</option>
                     <option>Agotado</option>
@@ -150,30 +150,24 @@
             </div>
             <div class="col-md-3 me-3">
                 <label class="form-label">Precio</label>
-                <select class="form-select">
+                <select class="form-select" id="filtroPrecio">
                     <option>De menor a mayor</option>
                     <option>De mayor a menor</option>
                 </select>
             </div>
-            <div class="col-md-3 me-3">
-                <label class="form-label">Ordenar</label>
-                <select class="form-select">
-                    <option>De la A a la Z</option>
-                    <option>De la Z a la A</option>
-                </select>
-            </div>
+           
         </div>
     </div>
 
     <div class="container py-5">
         <div class="row" id="datosRopa">
-            <!-- Aquí van las tarjetas imagenes/camisetas/camiNike.jpg-->
+            <!-- Aquí van las tarjetas con las imagenes y valores llamadas por medio del json-->
         </div>
     </div>
 
 
 
-  <footer class="bg-light text-dark pt-5">
+    <footer class="bg-light text-dark pt-5">
         <div class="container">
             <div class="row">
 
@@ -241,6 +235,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <script src="js/main.js"></script>
 
