listo el email y algunos cambios

--- a/newDrop.html
+++ b/newDrop.html
@@ -43,45 +43,8 @@
                             <a class="nav-link" href="newDrop.html">New Drop</a>
                         </li>
 
-
-                        <li class="nav-item dropdown position-static">
-                            <a class="nav-link dropdown-toggle  " href="#" id="dropdownClothes" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Clothes</a>
-                            <div class="dropdown-menu w-100" aria-labelledby="dropdownClothes">
-                                <div class="container d-flex py-4">
-
-                                    <!-- Categorías -->
-                                    <div class="col-3">
-                                        <ul class="list-unstyled">
-                                            <li><a class="dropdown-item  " href="#">Tees</a></li>
-                                            <li><a class="dropdown-item  " href="#">Jackets</a></li>
-                                            <li><a class="dropdown-item  " href="#">Accessories</a></li>
-                                            <li><a class="dropdown-item  " href="#">Pants</a></li>
-                                            <li><a class="dropdown-item  " href="#">Crewnecks</a></li>
-                                            <li><a class="dropdown-item  " href="#">Hoodies</a></li>
-                                            <li><a class="dropdown-item  " href="#">Shorts</a></li>
-                                            <li><a class="dropdown-item  " href="#">Mistery Box</a></li>
-                                        </ul>
-                                    </div>
-
-                                    <!-- Productos o imágenes (opcional) -->
-                                    <div class="col-9 d-flex gap-3 ml-5">
-                                        <div>
-                                            <img src="imagenes/prueba/oufi1.jpg" class="img-fluid ml-5"
-                                                style="max-width: 250px;">
-                                        </div>
-                                        <div>
-                                            <img src="imagenes/prueba/oufi2.jpg" class="img-fluid ml-5"
-                                                style="max-width: 250px;">
-                                        </div>
-                                        <div>
-                                            <img src="imagenes/prueba/oufi3.jpg" class="img-fluid ml-5"
-                                                style="max-width: 250px;">
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="clothes.html">Clothes</a>
                         </li>
 
 
@@ -155,7 +118,7 @@
                     <option>De mayor a menor</option>
                 </select>
             </div>
-           
+
         </div>
     </div>
 
