--- a/carrito2.html
+++ b/carrito2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Clothes</title>
+    <title>Carrito</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -10,16 +10,13 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-
-    <header>
-        <!-- place navbar here -->
+    <head>
         <nav class="navbar navbar-default bg-white navbar-trans navbar-expand-lg fixed-top">
             <div class="container">
 
@@ -44,7 +41,8 @@
                             <a class="nav-link" href="newDrop.html">New Drop</a>
                         </li>
 
-                        <li class="nav-item">
+
+                       <li class="nav-item">
                             <a class="nav-link" href="clothes.html">Clothes</a>
                         </li>
 
@@ -75,61 +73,28 @@
                     </ul>
                 </div>
 
-                <button type="button" class="btn btn-b-n navbar-toggle-box navbar-toggle-box-collapse"
-                    data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01">
-                    <i class="bi bi-search "></i>
-                </button>
 
-                <a href="carrito2.html"
-                    class="btn btn-b-n navbar-toggle-box navbar-toggle-box-collapse position-relative">
-                    <i class="bi bi-bag fs-5"></i>
-                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                        id="contadorCarrito2">
-                        0
-                    </span>
-                </a>
 
 
             </div>
         </nav>
-    </header>
+    </head>
 
-    <div class="hero-banner position-relative">
-        <div class="container position-relative z-1 py-5">
-            <!-- Filtros dentro del banner -->
-
+    <div class="container  py-5 ">
+        <h2 class="mb-4 espacioCarrito">Tu cesta de productos</h2>
+        <div class="row " id="contenedorCarrito2">
+            <!-- Aquí se cargan las tarjetas de productos -->
         </div>
     </div>
 
-    <div class="container">
-        <div class="row justify-content-center align-items-center  gx-4 gy-2 g-3 bg-white bg-opacity-75 p-4 rounded">
-            <div class="col-md-3 me-3">
-                <label class="form-label">Disponibilidad</label>
-                <select class="form-select" id="filtroDisponibilidad">
-                    <option>Todos</option>
-                    <option>Disponible</option>
-                    <option>Agotado</option>
-                </select>
-            </div>
-            <div class="col-md-3 me-3">
-                <label class="form-label">Precio</label>
-                <select class="form-select" id="filtroPrecio">
-                    <option>De menor a mayor</option>
-                    <option>De mayor a menor</option>
-                </select>
-            </div>
+    
 
-        </div>
+    <div class="text-center mt-4 espacioCarrito">
+        <button class="btn btn-dark  btn-lg me-2 " onclick="vaciarCarrito()">Vaciar cesta</button>
+        <a href="checkout2.html" class="btn btn-dark btn-lg">Proceder al pago</a>
     </div>
 
-    <div class="container py-5">
-        <div class="row" id="datosClothes">
-            <!-- Aquí van las tarjetas con las imagenes y valores llamadas por medio del json-->
-        </div>
-    </div>
-
-
-    <footer class="bg-light text-dark pt-5">
+     <footer class="bg-light text-dark pt-5">
         <div class="container">
             <div class="row">
 
@@ -186,6 +151,7 @@
                 </div>
             </div>
     </footer>
+    
 
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -196,10 +162,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
-    <script src="js/clothes.js"></script>
-
+    <script src="js/carrito2.js"></script>
 </body>
 
 </html>
