--- a/detalle2.html
+++ b/detalle2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Clothes</title>
+    <title>Detalles</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
@@ -17,9 +18,7 @@
 
 <body>
 
-
-    <header>
-        <!-- place navbar here -->
+    <head>
         <nav class="navbar navbar-default bg-white navbar-trans navbar-expand-lg fixed-top">
             <div class="container">
 
@@ -43,6 +42,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="newDrop.html">New Drop</a>
                         </li>
+
 
                         <li class="nav-item">
                             <a class="nav-link" href="clothes.html">Clothes</a>
@@ -92,40 +92,10 @@
 
             </div>
         </nav>
-    </header>
+    </head>
 
-    <div class="hero-banner position-relative">
-        <div class="container position-relative z-1 py-5">
-            <!-- Filtros dentro del banner -->
-
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row justify-content-center align-items-center  gx-4 gy-2 g-3 bg-white bg-opacity-75 p-4 rounded">
-            <div class="col-md-3 me-3">
-                <label class="form-label">Disponibilidad</label>
-                <select class="form-select" id="filtroDisponibilidad">
-                    <option>Todos</option>
-                    <option>Disponible</option>
-                    <option>Agotado</option>
-                </select>
-            </div>
-            <div class="col-md-3 me-3">
-                <label class="form-label">Precio</label>
-                <select class="form-select" id="filtroPrecio">
-                    <option>De menor a mayor</option>
-                    <option>De mayor a menor</option>
-                </select>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="container py-5">
-        <div class="row" id="datosClothes">
-            <!-- Aquí van las tarjetas con las imagenes y valores llamadas por medio del json-->
-        </div>
+    <div class="container py-5" id="detalleProducto2">
+        <!-- Aquí se carga el detalle -->
     </div>
 
 
@@ -187,7 +157,6 @@
             </div>
     </footer>
 
-    <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
@@ -196,10 +165,11 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>  
 
     <script src="js/clothes.js"></script>
 
+    <script src="js/detalle2.js"></script>
 </body>
 
 </html>
