listo el proyecto base

--- a/clothes.html
+++ b/clothes.html
@@ -167,14 +167,14 @@
                         <ul class="list-inline mb-2">
                             <li class="list-inline-item"><a href="index.html" class="text-dark">Home</a></li>
                             <li class="list-inline-item"><a href="newDrop.html" class="text-dark">New Drop</a></li>
-                            <li class="list-inline-item"><a href="#" class="text-dark">Clothes</a></li>
+                            <li class="list-inline-item"><a href="clothes.html" class="text-dark">Clothes</a></li>
                             <li class="list-inline-item"><a href="contact.html" class="text-dark">Info</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 text-md-end">
-                        <a href="#" class="text-dark me-3"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="bi bi-youtube"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.facebook.com/Adriel Gomez" class="text-dark me-3"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.tiktok.com/@niiiiiiiiiiiiiix0" class="text-dark me-3"><i class="bi bi-tiktok"></i></a>
+                        <a href="https://www.instagram.com/adriel06_" class="text-dark me-3"><i class="bi bi-instagram"></i></a>
                         <a href="https://wa.me/50660630863" class="text-dark me-3"><i class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
