--- a/newDrop.html
+++ b/newDrop.html
@@ -173,9 +173,9 @@
                         </ul>
                     </div>
                     <div class="col-md-6 text-md-end">
-                        <a href="#" class="text-dark me-3"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="bi bi-youtube"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="bi bi-instagram"></i></a>
+                           <a href="https://www.facebook.com/Adriel Gomez" class="text-dark me-3"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.tiktok.com/@niiiiiiiiiiiiiix0" class="text-dark me-3"><i class="bi bi-tiktok"></i></a>
+                        <a href="https://www.instagram.com/adriel06_" class="text-dark me-3"><i class="bi bi-instagram"></i></a>
                         <a href="https://wa.me/50660630863" class="text-dark me-3"><i class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
