--- a/contact.html
+++ b/contact.html
@@ -282,7 +282,7 @@
     crossorigin="anonymous"></script>
 
   <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPLtN_mWs9M2WbEk6oN34c0A0JxFzHamw&callback=initMap&v=weekly&solution_channel=GMP_CCS_geolocation_v2">
+    src="https://maps.googleapis.com/maps/api/js?=initMap&v=weekly&solution_channel=GMP_CCS_geolocation_v2">
     </script>
 
   <script src="js/Mapa.js"></script>
